--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "749, shawly",
   "license": "MIT",
   "dependencies": {
+    "moment": "^2.29.1",
     "ws": "^7.4.4"
   },
   "optionalDependencies": {
