feat(player-login): it is now possible for players to configure their controller via a separate URL

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "749, shawly",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "ws": "^7.4.4"
   },
