--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,6 +37,7 @@ jobs:
           else
             docker build . --file Dockerfile
           fi
+
   # Build images.
   build:
     runs-on: ubuntu-latest
@@ -67,16 +68,23 @@ jobs:
       id: prep
       run: |
         DOCKER_IMAGE=$IMAGE_NAME
+
         # Strip git ref prefix from version
-        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+        VERSION_FULL=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\)$,\1,')
+        VERSION_MINOR=$(echo "$VERSION_FULL" | sed 's,\.[^.]*$,,')
+        VERSION_MAJOR=$(echo "$VERSION_MINOR" | sed 's,\.[^.]*$,,')
+
         # Use Docker `edge` tag convention and pr-<number> for pull requests
-        [ "$VERSION" == "main" ] && VERSION=edge
-        [ ${{ github.ref }} == refs/pull/* ] && VERSION=pr-${{ github.event.number }}
-        TAGS="${DOCKER_IMAGE}:${VERSION}"  
-        [ "$VERSION" != "edge" ] && TAGS="$TAGS,${DOCKER_IMAGE}:latest"
-        echo ::set-output name=version::${VERSION}
+        [ "$VERSION_FULL" == "main" ] && VERSION_FULL=edge
+        [ ${{ github.ref }} == refs/pull/* ] && VERSION_FULL=pr-${{ github.event.number }}
+
+        TAGS="${DOCKER_IMAGE}:${VERSION_FULL}"  
+        [ "$VERSION_FULL" != "edge" -a ${VERSION_FULL:0:3} != "pr-" ] && TAGS="$TAGS,${DOCKER_IMAGE}:${VERSION_MINOR},${DOCKER_IMAGE}:${VERSION_MAJOR},${DOCKER_IMAGE}:latest"
+
+        echo ::set-output name=version::${VERSION_FULL}
         echo ::set-output name=tags::${TAGS}
         echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+
     - name: Build and push
       id: docker_build
       uses: docker/build-push-action@v2
