--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "mindflayer-server",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A lightweight websocket server for relaying messages to the Mind Flayer VTT module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "author": "749, shawly",
   "license": "MIT",
   "dependencies": {
+    "e131": "^1.1.3",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "winston": "^3.4.0",
     "ws": "^7.4.4"
   },
   "optionalDependencies": {
